# zero2prod

./: .env  Cargo.toml  README.md  configuration.yaml
migrations/: 20240531141244_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
