[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"


[dependencies]
actix-web = "4.6.0"
reqwest = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
