[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"


[dependencies]
actix-web = "4.6.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14.0"
reqwest = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4"] }
[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
